Fixed contact alignment

--- a/assets/css/spectrum-rust.css
+++ b/assets/css/spectrum-rust.css
@@ -2936,7 +2936,7 @@ p.demo-text {
 
 
 
-/*For debugging
+/*
 *{ border: 1px solid red; }*/
 
 /*Alto de los servicios en dispositivos moviles*/
@@ -2963,4 +2963,10 @@ p.demo-text {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  font-size: 16px;
+}
+
+#contact-icons {
+  width: 1.28571429em;
+  font-size: 2em;
 }
